--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <span class="home-icon">⌂</span>Simple Text Utils for Scala
 </a>
 <div class="version-number">
-1.4.0
+1.4.1*
 </div>
 </div>
 <div class="nav-toc">
@@ -69,7 +69,7 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <span class="home-icon">⌂</span>Simple Text Utils for Scala
 </a>
 <div class="version-number">
-1.4.0
+1.4.1*
 </div>
 </div>
 <div class="nav-toc">
@@ -96,10 +96,10 @@ C16.952,7,17,6.553,17,6c0-0.553-0.048-1-0.6-1H3.6C3.048,5,3,5.447,3,6C3,6.553,3.
 <h1><a href="#simple-text-utils-for-scala" name="simple-text-utils-for-scala" class="anchor"><span class="anchor-link"></span></a>Simple Text Utils for Scala</h1>
 <p>Simple Scala library for outputting formatted text.</p>
 <h2><a href="#getting-started" name="getting-started" class="anchor"><span class="anchor-link"></span></a>Getting Started</h2>
-<pre class="prettyprint"><code class="language-scala">libraryDependencies += &quot;purpledragon.software&quot; %% &quot;text-utils&quot; % &quot;1.4.0&quot;
+<pre class="prettyprint"><code class="language-scala">libraryDependencies += &quot;purpledragon.software&quot; %% &quot;text-utils&quot; % &quot;1.4.1-SNAPSHOT&quot;
 </code></pre>
 <div class="source-github">
-The source code for this page can be found <a href="https://github.com/stringbean/text-utils/tree/v1.4.0/src/main/paradox/index.md">here</a>.
+The source code for this page can be found <a href="https://github.com/stringbean/text-utils/tree/master/src/main/paradox/index.md">here</a>.
 </div>
 
 <div class="nav-next">
@@ -182,7 +182,7 @@ The source code for this page can be found <a href="https://github.com/stringbea
 <script type="text/javascript" src="lib/prettify/prettify.js"></script>
 <script type="text/javascript" src="lib/prettify/lang-scala.js"></script>
 <script type="text/javascript">jQuery(function(){window.prettyPrint && prettyPrint()});</script>
-<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.4.0', 'https://github.com/stringbean/text-utils')});</script>
+<script type="text/javascript">jQuery(function(jq){initOldVersionWarnings(jq, '1.4.1-SNAPSHOT', 'https://github.com/stringbean/text-utils')});</script>
 
 
 </html>
